--- a/src/main/resources/ideas.yml
+++ b/src/main/resources/ideas.yml
@@ -11,3 +11,11 @@ Positionen:
   BattleBox2
   BattleBoxRespawn
   BattleBoxHologram (holo)
+
+
+HOT POTATOE
+
+proxy restart für automute chatlog fix
+
+bungeecord auto restart nachts um 1 uhr
++ alle server? (performance)
